k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"devops-learning-site","namespace":"devops-docs"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"devops-learning-site"}},"template":{"metadata":{"labels":{"app":"devops-learning-site"}},"spec":{"containers":[{"image":"devops-learning-site:latest","imagePullPolicy":"Never","livenessProbe":{"httpGet":{"path":"/","port":80},"initialDelaySeconds":5,"periodSeconds":30},"name":"nginx","ports":[{"containerPort [...]
  creationTimestamp: "2026-05-12T11:04:27Z"
  generation: 4
  name: devops-learning-site
  namespace: devops-docs
  resourceVersion: "119453"
  uid: 265970e6-32df-4bbd-bcab-348af1083885
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: devops-learning-site
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-05-13T19:05:18+08:00"
      creationTimestamp: null
      labels:
        app: devops-learning-site
    spec:
      containers:
      - image: nginx:alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /home/ubuntu/projects/devops-docs
          type: Directory
        name: html
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-12T11:04:39Z"
    lastUpdateTime: "2026-05-12T11:04:39Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-05-12T11:04:27Z"
    lastUpdateTime: "2026-05-13T11:06:37Z"
    message: ReplicaSet "devops-learning-site-8d4868c7f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
