k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"devops-learning-site","namespace":"devops-docs"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"devops-learning-site"},"type":"ClusterIP"}}
  creationTimestamp: "2026-05-12T11:04:27Z"
  name: devops-learning-site
  namespace: devops-docs
  resourceVersion: "77171"
  uid: c9f9552c-825e-4afe-888b-add79393191e
spec:
  clusterIP: 10.43.97.145
  clusterIPs:
  - 10.43.97.145
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: devops-learning-site
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
